bk_ida/gccida/g1/swap_rtx_condition
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1710:4: error: expected ';' after expression
rtx flags_user; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1710:5: error: use of undeclared identifier 'flags_user'
rtx flags_user; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1713:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1713:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1719:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1725:1: error: use of undeclared identifier 'flags_user'
flags_user = next_flags_user( insn); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1726:7: error: use of undeclared identifier 'flags_user'
rtx = flags_user; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1727:7: error: use of undeclared identifier 'flags_user'
if ( !flags_user ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1729:16: error: use of undeclared identifier 'flags_user'
v2 = ( __int64)flags_user[2]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1748:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)rtx[2]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1758:1: error: use of undeclared identifier 'v10'
v10 = next_flags_user( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1759:7: error: use of undeclared identifier 'v10'
rtx = v10; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1760:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1762:16: error: use of undeclared identifier 'v10'
v2 = ( __int64)v10[2]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1773:38: error: expected ')'
result = swap_rtx_condition_1( ( rtx)v2); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1773:30: note: to match this '('
result = swap_rtx_condition_1( ( rtx)v2); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1781:29: error: expected ')'
swap_rtx_condition_1( ( rtx)v2); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/reg-stack.c:1781:21: note: to match this '('
swap_rtx_condition_1( ( rtx)v2); 
                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition/src/obj/reg-stack.o] Error 1
